# CombHTS

./: .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS_PENDING.md  README.md  STATUS.md  THINK.md  pyproject.toml
configs/: CALIBRATION_ACTIVE.md  calibration_operational.yaml  calibration_profiles.yaml  fc_to_agagcl_offsets.csv  orca_pilots.yaml  scoring.yaml  solvation_cosmors_pilot.yaml  tier1.yaml  tier2.yaml  tier2_orca.yaml  tier3.yaml  validation.yaml
data/: benchmark.csv  benchmark_candidates.csv  electrolytes.csv  monomers.csv  needs_review.md  polymerizability_labels.csv  polymerization.csv  solvation_cosmors.csv  solvent_benchmark.csv  solvent_windows.csv  solvents.csv
docs/: benchmark_curation_protocol.md  benchmark_methods_memo.md  code_structure.md  current_state.md  dimerization_offset_diagnosis.md  output_contracts.md  overnight_report_20260618.md  overnight_report_20260618_batch2.md  overnight_report_20260618_batch3.md  step1_real_bandgap_dimerization_report.md  validation_memo_20260617.md
scripts/: README.md  analyze_lambda_feasibility.py  analyze_optical_calibration_n6.py  analyze_optical_calibration_real_n6.py  analyze_solvation_cosmors_pilot.py  audit_lit_curation_staging.py  benchmark_conformer_parallelism.py  build_eox_g1_2_master_audit.py  build_eox_r11_r21_staging.py  compute_lambda_extra.py  harvest_cosmors.py  harvest_dftcal_orca.py  launch_tier2_fullsweep.sh  make_talk_figures.py  run_analyze.sge  run_b1_batch.sge  run_b1_dimer.sge  run_cosmors_harvest.sge  run_dft_calibration.sge  run_dftcal_orca_array.sge  run_lambda_extra.sge  run_memo.sge  run_oligomer.sge  run_optical_calibration_n6.py  run_optical_calibration_n6.sge  run_optical_reharvest.sge  run_optical_smoke.sge  run_orca_optical_pilot.sge  run_orca_solvation_pilot.sge  run_pytest.sge  run_solvation_cosmors_pilot.sge  run_tier1.sge  run_tier1_rescore.sge  run_tier2_array.sge  run_tier2_bandgap_array.sge  run_tier2_dimer_array.sge  run_tier2_finalize.sge  run_tier2_orchestrate.sge  run_tier2_pilot_array.sge  run_tier2_pilot_harvest.sge  (+2 more)
tests/: test_analysis.py  test_cache.py  test_calibration.py  test_calibration_operational.py  test_chemspace.py  test_cli_contracts.py  test_conditioned_solvent_windows.py  test_conformer_benchmark_script.py  test_conformer_search.py  test_cosmors.py  test_coupling_risk.py  test_dft_calibration.py  test_dimerization.py  test_doctor.py  test_engines.py  test_gaussian.py  (+33 more)
(+194 files in other folders)
